--- a/styles/styles.css
+++ b/styles/styles.css
@@ -143,16 +143,21 @@ main{
 }
 
 #movies{
-    width: 90%;
-    max-width: 1200px;
+    max-width: 1000px;
+    height: 80%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(5, 1fr);
     gap: 20px;
     margin-top: 20px;
     margin-bottom: 50px;
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+#missing{
+    grid-area: 1/1/1/6;
+    padding: 20px;
 }
 
 #missing-img{
