--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    z-index: 1;
 }
 
 .active{
@@ -32,25 +33,21 @@ body{
     align-items: center;
 }
 main{
-    height: 100vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
 
 #home {
+    height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     align-items: center;
     justify-items: center;
-    justify-content: center;
-    align-items: center;
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; */
 }
 
 #home-img{
@@ -143,10 +140,11 @@ main{
 }
 
 #movies{
-    max-width: 1000px;
     height: 80%;
+    width: 80%;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(3, auto);
     gap: 20px;
     margin-top: 20px;
     margin-bottom: 50px;
@@ -167,6 +165,53 @@ main{
     border-radius: 30px;
     box-shadow: 0 8px 32px rgba(31, 38, 135, 0.35);
 }
+
+
+/* Cards */
+.movie-card{
+    position: relative;
+    display: grid;
+    grid-template-rows: subgrid;
+    grid-row: span 3;
+    background: rgb(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgb(255, 255, 255, 0.2);
+    box-shadow: 0 8px 32px rgba(31, 38, 135, 0.35);
+    border-radius: 20px;
+    width: 100%;
+    margin: 1rem;
+}
+
+
+
+.card-img-top {
+    height: 300px;
+    width: 100%;
+    overflow: hidden;
+    border-radius: 20px 20px 0px 0px;
+}
+
+.card-img-top img{
+     height: auto;
+     width: 100%;
+}
+
+footer{
+    width: 100%;
+    font-size: 20px;
+    color: white;
+    background: rgb(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    bottom: 0px;
+    /* border: 1px solid rgb(255, 255, 255, 0.2); */
+    box-shadow: 0 8px 32px rgba(31, 38, 135, 0.35);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    margin-top: 50px;
+}
+
 @keyframes gradient {
     0%{
         background-position: 0% 50%;
