--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,6 @@ header{
     backdrop-filter: blur(10px);
     top: 0px;
     position: fixed;
-    /* border: 1px solid rgb(255, 255, 255, 0.2); */
     box-shadow: 0 8px 32px rgba(31, 38, 135, 0.35);
     display: flex;
     align-items: center;
@@ -33,16 +32,16 @@ body{
     align-items: center;
 }
 main{
-    height: 90vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
 }
 
+/* Home Section */
+
 #home {
-    height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -94,6 +93,9 @@ main{
     text-shadow: #72cada 0px 0px 15px;
 }
 
+
+/* Search Section */
+
 #search-icon{
     font-size: 30px;
     margin: 10px 15px;
@@ -125,6 +127,7 @@ main{
     font-size: 18px;
     background: rgb(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
+    text-shadow: #72cada 0px 0px 15px;
     border: 1px solid rgb(255, 255, 255, 0.2);
     border-radius: 30px;
     margin-top: 100px;
@@ -140,14 +143,11 @@ main{
 }
 
 #movies{
-    height: 80%;
     width: 80%;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(3, auto);
     gap: 20px;
-    margin-top: 20px;
-    margin-bottom: 50px;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -166,8 +166,20 @@ main{
     box-shadow: 0 8px 32px rgba(31, 38, 135, 0.35);
 }
 
+/* Favorites Section */
 
-/* Cards */
+#favorites{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
+    margin-top: 100px;
+}
+
+/* Movie Cards */
+
 .movie-card{
     position: relative;
     display: grid;
@@ -181,7 +193,6 @@ main{
     width: 100%;
     margin: 1rem;
 }
-
 
 
 .card-img-top {
@@ -202,14 +213,12 @@ footer{
     color: white;
     background: rgb(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
-    bottom: 0px;
-    /* border: 1px solid rgb(255, 255, 255, 0.2); */
     box-shadow: 0 8px 32px rgba(31, 38, 135, 0.35);
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 10px;
-    margin-top: 50px;
+    position: bottom;
 }
 
 @keyframes gradient {
