--- a/styles/styles.css
+++ b/styles/styles.css
@@ -166,6 +166,37 @@ main{
     box-shadow: 0 8px 32px rgba(31, 38, 135, 0.35);
 }
 
+#pagination{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#next-page-btn, #prev-page-btn{
+    padding: 10px 20px;
+    font-size: 20px;
+    margin: 20px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: rgb(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    color: white;
+    border: 1px solid rgb(255, 255, 255, 0.2);
+    border-radius: 30px;
+    box-shadow: 0 8px 32px rgba(31, 38, 135, 0.35);
+    transition: all 0.3s ease;
+}
+
+#next-page-btn:hover, #prev-page-btn:hover{
+    color: #44b4e4;
+    transform: scale(1.1);
+    text-shadow: #72cada 0px 0px 15px;
+}
+
+
 /* Favorites Section */
 
 #favorites{
