--- a/styles/styles.css
+++ b/styles/styles.css
@@ -346,18 +346,10 @@ footer {
     overflow: hidden;
 }
 
-/* #details-card img{
-    grid-area: 1 / 2 / 1 / 1;
-    border-radius: 20px 0px 0px 20px;
-    height: auto;
-    width: 100%;
-    align-self: flex-start;
-
-} */
 
 #details-info {
     min-width: 200px;
-    width: 100%;
+    max-width: 800px;
     padding: 20px;
     display: flex;
     row-gap: 25px;
@@ -413,4 +405,54 @@ footer {
 body {
     background-size: 200% 200%;
     animation: gradient 15s ease infinite;
+}
+
+
+/* Media Queries*/
+@media (max-width: 1200px) {
+#movies {
+    grid-template-columns: 1fr 1fr;
+}
+
+#details {
+    grid-template-columns: 1fr;
+}
+
+#movie-details {
+    margin-bottom: 30px;
+}
+
+#details-card {
+    grid-area: 1/ 1/ 3/ 3;
+}
+
+#details-info {
+    max-width: 400px;
+}
+
+#movie-details {
+    margin-top: 100px;
+    align-self: center;
+    text-align: center;
+    width: 80%;
+}
+}
+
+
+@media (max-width: 680px) {
+
+#movies {
+    grid-template-columns: auto;
+    max-width: 350px;
+}
+
+#details-card {
+    display: block;
+}
+
+#details-info {
+    max-width: 300px;
+}
+
+
 }
